# min-alpha-zero

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  agents.cpp  alpha_zero.h  chess_utils.hpp  dashboard.py  dataset.py  evaluator.cpp  experiments.md  logging.cpp  main.cpp  model.py  model_eval.cpp  read_training_data.py  run.sh  train.py  worker.cpp
backlog/: todo_001.md
dashboards/: explore_data.py
include/: alpha_zero.h  counter.hpp
notebooks/: ChessTrainingNew.ipynb  training.ipynb
scripts/: alpha_zero.py  analyze_logits.py  chess_utils.py  cuda_prefetcher.py  dataset.py  debug_mcts.py  mcts_demo.py  mcts_mate_in_one.py  model.py  model_eval.py  opening_analysis.py  print_training_records.py  read_training_data.py  run_all.py  train.py  verify_min_loss.py  visualize.py
scripts/dashboards/: explore_data.py
scripts/test/: mate_in_one.py  test_board.py
src/: agents.cpp  evaluator.cpp  logging.cpp  python_bindings.cpp  test_board.cpp  worker.cpp
test/: test_all.cpp
